# cli-appletv

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: release.yml
pyatv_cli/: __init__.py  cli.py  config.py  connection.py  output.py
pyatv_cli/commands/: __init__.py  accounts.py  apps.py  audio.py  keyboard.py  media.py  monitor.py  power.py  remote.py  settings.py  shell.py  stream.py  system.py  touch.py
pyatv_cli/tui/: __init__.py  app.py
