[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-appletv"
version = "2.0.0"
description = "apple tv remote control from the terminal — tui + cli"
readme = "readme.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Yigit Konur" }]
keywords = ["apple-tv", "remote", "tui", "pyatv", "cli", "textual"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia",
]
dependencies = [
    "pyatv>=0.15.0",
    "textual>=0.40.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
atv = "pyatv_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/yigitkonur/cli-appletv"
Issues = "https://github.com/yigitkonur/cli-appletv/issues"
